--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
-    "numpy (>=2.2.4,<3.0.0)"
+    "numpy (>=2.2.4,<3.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "statsmodels (>=0.14.4,<0.15.0)"
 ]
 
 [tool.poetry]
