--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "numpy (>=2.2.4,<3.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "matplotlib (>=3.10.1,<4.0.0)",
-    "statsmodels (>=0.14.4,<0.15.0)"
+    "statsmodels (>=0.14.4,<0.15.0)",
+    "scikit-learn (>=1.6.1,<2.0.0)"
 ]
 
 [tool.poetry]
