--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "google (>=3.0.0,<4.0.0)",
     "google-api-python-client (>=2.165.0,<3.0.0)",
     "google-auth-httplib2 (>=0.2.0,<0.3.0)",
-    "google-auth-oauthlib (>=1.2.1,<2.0.0)"
+    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
+    "sqlalchemy (>=2.0.39,<3.0.0)"
 ]
 
 [tool.poetry]
