--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "google-auth-oauthlib (>=1.2.1,<2.0.0)",
     "sqlalchemy (>=2.0.39,<3.0.0)",
     "pydot (>=3.0.4,<4.0.0)",
-    "networkx (>=3.4.2,<4.0.0)"
+    "networkx (>=3.4.2,<4.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 [tool.poetry]
