--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "sqlalchemy (>=2.0.39,<3.0.0)",
     "pydot (>=3.0.4,<4.0.0)",
     "networkx (>=3.4.2,<4.0.0)",
-    "openpyxl (>=3.1.5,<4.0.0)"
+    "openpyxl (>=3.1.5,<4.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)"
 ]
 
 [tool.poetry]
